--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,3 +12,6 @@ BugReports: https://github.com/krlmlr/duckplyr/issues
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
+LinkingTo: 
+    cpp11
+SystemRequirements: C++11
