--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: stringpool
-Title: What the Package Does (One Line, Title Case)
+Title: Understand R's Global String Pool
 Version: 0.0.0.9000
 Date: 2023-04-08
 Authors@R: 
     person("Kirill", "Müller", , "kirill@cynkra.com", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-1416-3412"))
-Description: What the package does (one paragraph).
+Description: Exposes R's global string pool to the user.
 License: GPL-3
 URL: https://github.com/krlmlr/duckplyr, https://krlmlr.github.io/duckplyr
 BugReports: https://github.com/krlmlr/duckplyr/issues
@@ -14,4 +14,3 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 LinkingTo: 
     cpp11
-SystemRequirements: C++11
