--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,8 +7,8 @@ Authors@R:
            comment = c(ORCID = "0000-0002-1416-3412"))
 Description: Exposes R's global string pool to the user.
 License: GPL-3
-URL: https://github.com/krlmlr/duckplyr, https://krlmlr.github.io/duckplyr
-BugReports: https://github.com/krlmlr/duckplyr/issues
+URL: https://github.com/krlmlr/stringpool, https://krlmlr.github.io/stringpool
+BugReports: https://github.com/krlmlr/stringpool/issues
 LinkingTo: 
     cpp11
 Encoding: UTF-8
